# starter-cmake-vcpkg-simple

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml
apps/app1/: CMakeLists.txt
libs/lib1/: CMakeLists.txt
libs/lib1/include/lib1/: my_header.h
libs/lib1/src/: my_header.cpp
libs/lib1/tests/: CMakeLists.txt  my_header_test.cpp
vcpkg-ports/opencv4/: portfile.cmake
